# master

./: .gitignore  CMakeLists.txt  about.txt
src/: getConfig.c  main.c  master.h  optionMenu.c  ptcFileWork.c  string.c  visual.c
